# GitPDM

./: .gitignore  ADDITIONAL_CLEANUP.md  ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_WALKTHROUGH.md  AUTO_INITIALIZATION.md  CHANGELOG.md  CHANGES_STRUCTURE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLEANUP_VERIFICATION.md  CONSOLIDATION_DOCS_README.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_SUMMARY.md  FREECAD_1_2_MIGRATION_PLAN.md  GITPDM_DEV_PLAN.md  GITPDM_REQUIREMENTS.md  IMPLEMENTATION_QUICKSTART.md  Init.py  InitGui.py  LICENSE  MANUAL_TEST_CHECKLIST.md  MASSIVE_REDUCTION.md  MINIMAL_SCRIPT_WIRING.md  PLATFORM_SUPPORT.md  PROGRESS.md  README.md  RELEASE_NOTES_v1.0.0.md  REPO_BROWSER_WORKTREE.md  SECURITY.md  SPRINT2_DEMO_RESULTS.md  SPRINT4_MANUAL_TEST_PLAN.md  SPRINT_1_CORE_MIGRATION.md  SPRINT_2_COMPLETE.md  SPRINT_2_HOOK_MODERNIZATION.md  SPRINT_3_COMPLETE.md  SPRINT_3_WRAPPER_ELIMINATION.md  SPRINT_4_COMPLETE.md  SPRINT_4_PLAN.md  SPRINT_4_UI_REFACTORING.md  (+44 more)
.freecad-pdm/: preset.json
.github/workflows/: ci.yml  release.yml
Dev_Docs/: GITPDM_DEV_PLAN.md  GITPDM_REQUIREMENTS.md  MANUAL_TEST_CHECKLIST.md  PRESENCE_AND_LFS_REMOVAL_PLAN.md
GitCAD-main/: LICENSE  README.md  how-to-contribute.md
docs/: AUTO_REFRESH.md  BRANCH_SYSTEM_STATUS.md  BUTTON_API.md  CHEATSHEET.md  CORRUPTION_PREVENTION_GUIDE.md  DIRECT_SCRIPT_CONVERSION.md  FCSTD_CORRUPTION_FIX.md  FEATURE_ROADMAP.md  FIX_GITHUB_USERNAME_BUG.md  GITCAD_HISTORY.md  GITHUB_APPS_MIGRATION.md  GITPDM_AUDIT_FIXES.md  INSTALL_TEST.md  LEGACY_GITCAD_REPOS.md  MISSING_GUI_FEATURES.md  OAUTH_DEVICE_FLOW.md  PLATFORM_SUPPORT.md  PYTHON_COMPATIBILITY.md  README.md  RELEASE_NOTES_v0.8.0.md  SPRINT_1_COMPLETE.md  STRUCTURE.txt  TESTING_GUIDE.md  TESTING_USERNAME_FIX.md  TROUBLESHOOTING_NEW_REPO.md  WORKTREE_VISUAL_GUIDE.md
freecad/gitpdm/: __init__.py  commands.py  init_gui.py  workbench.py
freecad_gitpdm/: InitGui.py  __init__.py  commands.py  workbench.py
freecad_gitpdm/auth/: __init__.py  check.py  config.py  credential_chain.py  keys.py  oauth_device_flow.py  scope_validator.py  token_refresh.py  token_store.py  token_store_factory.py  token_store_file.py  token_store_linux.py  token_store_macos.py  token_store_wincred.py
freecad_gitpdm/core/: __init__.py  checkpoint.py  config_manager.py  diagnostics.py  fcstd_tool.py  input_validator.py  jobs.py  lock_manager.py  log.py  paths.py  presence.py  provider_config.py  publish.py  result.py  scaffold.py  services.py  session_lock.py  settings.py  storage_mode.py
freecad_gitpdm/export/: __init__.py  backup_manager.py  exporter.py  gitcad_integration.py  glossary.py  manifest.py  mapper.py  model_export.py  preset.py  stl_converter.py  thumbnail.py  view_helper.py
freecad_gitpdm/git/: __init__.py  client.py  hooks.py  hooks_manager.py
freecad_gitpdm/gitcad/: README.md  __init__.py  config.py  detector.py  test_gitcad.py  wrapper.py
freecad_gitpdm/github/: __init__.py  api_client.py  cache.py  create_repo.py  errors.py  identity.py  rate_limiter.py  repos.py
freecad_gitpdm/providers/: __init__.py  base.py  gitlab.py
freecad_gitpdm/ui/: __init__.py  branch_ops.py  commit_push.py  connections_dialog.py  dialogs.py  fetch_pull.py  file_browser.py  gitcad_config_dialog.py  gitcad_init_wizard.py  gitcad_lock.py  github_auth.py  label_style.py  new_repo_wizard.py  panel.py  pat_auth.py  repo_picker.py  repo_validator.py  storage_mode_dialog.py
reference/Addon-Template-Latest/: .gitignore  CHANGELOG.md  README.md  package.xml  pyproject.toml
tests/: conftest.py  demo_sprint2.py  preview_staging_demo.py  smoke_gitclient.py  test_auth_check.py  test_bitbucket_provider.py  test_checkpoint.py  test_connections_dialog.py  test_credential_chain.py  test_divergent.py  test_generic_provider_flow.py  test_git_client.py  test_git_hooks.py  test_gitcad_integration.py  test_gitea_provider.py  test_github_errors.py  test_gitlab_provider.py  test_glossary.py  test_hooks_manager.py  test_identity_fetch.py  test_input_validator.py  test_log.py  test_master_fallback.py  test_oauth_device_flow.py  test_open_clone_connect_callback.py  test_platform_support.py  test_presence.py  test_preset.py  test_provider_config.py  test_provider_settings.py  test_providers.py  test_providers_github_errors.py  test_redaction.py  test_result.py  test_services.py  test_services_container.py  test_session_lock.py  test_settings.py  test_shared_provider_infra.py  test_smoke_imports.py  (+6 more)
tools/: architecture_baseline.json  architecture_guard.py  provider_endpoint_smoke.py  stdlib_test_runner.py  storage_mode_benchmark.py
(+157 files in other folders)
