<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<!-- SPDX-License-Identifier: MIT -->
<!--
  FreeCAD Addon Manager metadata (Phase G7 / R3.3). Schema verified against
  FreeCAD's own official template (github.com/FreeCAD/Addon-Template) and a
  real published workbench's package.xml (FreeCAD_FastenersWB) as of
  2026-07-19, though not validated against FreeCAD's actual Addon Manager
  metadata parser/schema validator, since that requires a running FreeCAD
  installation this environment doesn't have. GitPDM uses the "legacy"
  layout (Init.py/InitGui.py/freecad_gitpdm/ at repo root, not the newer
  freecad/<Name>/ namespaced layout); both are accepted per FreeCAD's
  Addon-Academy docs.

  Maintainer email is set (Ryan@nerd-sniped.com, 2026-07-20). Icon added
  2026-07-20 at Resources/icons/GitPDM.svg and wired into both this file's
  <icon> tag and InitGui.py's workbench Icon attribute (previously ""). No
  known placeholders remain before submission — see the submission-process
  note below.

  Submission itself (per https://freecad.github.io/Addon-Academy/Guides/Publishing/Indexed)
  is not a PR to this repo or to the index repo directly; it's a GitHub
  issue against github.com/FreeCAD/Addons using the "Addon - Addition"
  issue type (or the Codeberg mirror, or a forum post). That's an external,
  identity-bound action for a maintainer to take, not something done from
  here.

  Audited 2026-07-20 against the actual published Qualities list
  (Topics/Addon-Index/Index/Qualities.html) ahead of submission: added the
  <depend> entries below (secretstorage/keyring were real runtime deps in
  pyproject.toml but invisible to the Addon Manager, which only installs
  what's declared here — Linux/macOS users installing via the index would
  otherwise get no auto-install and a silent ImportError in credential
  storage) and fixed <url type="readme"> to point at raw Markdown per the
  Manifest guide and the official Addon-Template's own example (was a
  GitHub blob/HTML view). No platform-conditional syntax exists in this
  manifest format, hence optional="true" on both — neither is needed on
  Windows, and an install failure there must not block the whole addon.
-->
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">

    <name>GitPDM</name>
    <description>Git version control and multi-host (GitHub/GitLab/Bitbucket/Gitea-Forgejo/SourceHut) collaboration for FreeCAD documents, with file-open presence indicators, previews, and continuous checkpointing.</description>
    <version>0.6.3</version>
    <date>2026-07-21</date>

    <freecadmin>1.0</freecadmin>
    <pythonmin>3.11</pythonmin>

    <depend type="python" optional="true">secretstorage</depend>
    <depend type="python" optional="true">keyring</depend>

    <tag>version-control</tag>
    <tag>git</tag>
    <tag>pdm</tag>
    <tag>collaboration</tag>

    <maintainer email="Ryan@nerd-sniped.com">GitPDM Contributors</maintainer>

    <icon>Resources/icons/GitPDM.svg</icon>

    <license file="LICENSE">MIT</license>

    <url type="repository" branch="main">https://github.com/nerd-sniped/GitPDM</url>
    <url type="bugtracker">https://github.com/nerd-sniped/GitPDM/issues</url>
    <url type="readme">https://raw.githubusercontent.com/nerd-sniped/GitPDM/main/README.md</url>

    <content>
        <workbench>
            <classname>GitPDMWorkbench</classname>
            <subdirectory>./</subdirectory>
            <tag>git-pdm</tag>
        </workbench>
    </content>

</package>
