[project]
name = "freecad-gitpdm"
version = "0.1.0"
description = "Git-based Product Data Management for FreeCAD"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--cov=freecad_gitpdm",
  "--cov-report=term-missing",
  "--cov-report=html",
]

[tool.ruff]
# Conservative baseline: catch syntax and undefined-name style issues
# without forcing mass cleanups/refactors in Sprint 1.
target-version = "py38"
line-length = 88

[tool.ruff.lint]

# Keep the checks intentionally small for now.
select = [
  "E9",   # syntax errors
  "F63",  # invalid print format
  "F7",   # syntax errors
  "F82",  # undefined names
]

exclude = [
  ".git",
  "__pycache__",
]
